# ndarray-npz

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: build.yml
src/: lib.rs
tests/: npz.rs
