[package]
name = "ndarray-npz"
version = "0.1.0"
rust-version = "1.60"
edition = "2021"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = "Advanced .npz file format support for n-dimensional arrays."
documentation = "https://docs.rs/ndarray-npz"
repository = "https://github.com/qu1x/ndarray-npz"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
	"array",
	"ndarray",
	"numpy",
	"npy",
	"npz",
]
categories = [
	"encoding",
	"parser-implementations",
	"science",
]
include = [
	"src/**/*.rs",
	"tests/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ndarray = "0.15.6"
ndarray-npy = { version = "0.8.1", default-features = false }
zip = { version = "0.6.4", default-features = false }
crc32fast = "1.3.2"

[dev-dependencies]
aligned-vec = "0.5"
memmap2 = "0.5.10"

[features]
default = ["compressed", "num-complex-0_4"]
compressed = ["zip/deflate"]
num-complex-0_4 = ["ndarray-npy/num-complex-0_4"]

[profile.test]
opt-level = 2
