[package]
name = "ndarray-npz"
version = "0.4.1"
rust-version = "1.85.0"
edition = "2024"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = "Advanced .npz file format support for n-dimensional arrays."
documentation = "https://docs.rs/ndarray-npz"
repository = "https://github.com/qu1x/ndarray-npz"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
	"array",
	"ndarray",
	"numpy",
	"npy",
	"npz",
]
categories = [
	"encoding",
	"parser-implementations",
	"science",
]
include = [
	"src/**/*.rs",
	"tests/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ndarray = "0.16.1"
ndarray-npy = { version = "0.9.1", default-features = false }
zip = { version = "2.5.0", default-features = false }
crc32fast = "1.4.2"

[dev-dependencies]
aligned-vec = "0.6.4"
memmap2 = "0.9.5"

[features]
default = ["compressed", "num-complex-0_4"]
compressed = ["zip/deflate"]
num-complex-0_4 = ["ndarray-npy/num-complex-0_4"]

[profile.test]
opt-level = 2
